--- a/AvaloniaReference/AvaloniaReferenceShared/MainWindow.axaml
+++ b/AvaloniaReference/AvaloniaReferenceShared/MainWindow.axaml
@@ -3,33 +3,44 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-		Width="800"
-		Height="450"
+        Width="800"
+        Height="450"
         x:Class="AvaloniaReference.MainWindow"
-		xmlns:pages="clr-namespace:AvaloniaReference.Pages;assembly=AvaloniaReferenceShared"
-		xmlns:local="clr-namespace:AvaloniaReference;assembly=AvaloniaReferenceShared"
+        xmlns:pages="clr-namespace:AvaloniaReference.Pages;assembly=AvaloniaReferenceShared"
+        xmlns:local="clr-namespace:AvaloniaReference;assembly=AvaloniaReferenceShared"
         Title="AvaloniaReference">
 
-	<Window.DataTemplates>
-		<DataTemplate DataType="{x:Type local:Section}">
-			<TabItem Header="{Binding Header}" Margin="0" Padding="0" />
-		</DataTemplate>
-	</Window.DataTemplates>
+    <Window.DataTemplates>
+        <DataTemplate DataType="{x:Type local:Section}">
+            <TabItem Header="{Binding Header}" Margin="0" Padding="0" />
+        </DataTemplate>
+    </Window.DataTemplates>
 
-	<Grid ColumnDefinitions="auto, 2, *">
-		<TreeView Grid.Column="0" Margin="5" SelectionMode="Single"
-				  x:Name="treeView"
-				  SelectionChanged="OnSelectionChanged">
-			<TreeViewItem Header="Home" IsSelected="True"/>
-			<TreeViewItem Header="Controls" IsExpanded="True">
-				<TreeViewItem Header="Button" />
-			</TreeViewItem>
-		</TreeView>
+    <Grid ColumnDefinitions="auto, 2, *">
+        <TreeView Grid.Column="0" Margin="5" SelectionMode="Single"
+                  x:Name="treeView"
+                  SelectionChanged="OnSelectionChanged">
+            <TreeViewItem Header="Home" IsSelected="True" />
+            <TreeViewItem Header="Controls" IsExpanded="True">
+                <TreeViewItem Header="Button" />
+            </TreeViewItem>
+            <TreeViewItem Header="Charts" IsExpanded="True">
+                <TreeViewItem Header="Donut" />
+                <TreeViewItem Header="Line" />
+            </TreeViewItem>
+        </TreeView>
 
-		<GridSplitter ResizeDirection="Columns" Grid.Column="1" Background="Black" />
+        <GridSplitter ResizeDirection="Columns" Grid.Column="1" Background="Black" />
 
-		<pages:PageHome Grid.Column="2" IsVisible="{Binding SelectedPage.IsHome}" />
-		<pages:PageButton Grid.Column="2" IsVisible="{Binding SelectedPage.IsButton}" />
-		<pages:PageControls Grid.Column="2" IsVisible="{Binding SelectedPage.IsControls}" />
-	</Grid>
+        <ScrollViewer Grid.Column="2" Margin="5,0,5,0">
+            <Grid>
+                <pages:PageHome IsVisible="{Binding SelectedPage.IsHome}" />
+                <pages:PageButton IsVisible="{Binding SelectedPage.IsButton}" />
+                <pages:PageControls IsVisible="{Binding SelectedPage.IsControls}" />
+                <pages:PageCharts IsVisible="{Binding SelectedPage.IsCharts}" />
+                <pages:PageChartDonut IsVisible="{Binding SelectedPage.IsChartDonut}" />
+                <pages:PageChartLine IsVisible="{Binding SelectedPage.IsChartLine}" />
+            </Grid>
+        </ScrollViewer>
+    </Grid>
 </Window>
