--- a/AvaloniaReference/AvaloniaReferenceShared/Pages/PageChartLine.axaml
+++ b/AvaloniaReference/AvaloniaReferenceShared/Pages/PageChartLine.axaml
@@ -3,6 +3,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia"
              x:Class="AvaloniaReference.Pages.PageChartLine">
-    Insert line chart here
+    <Grid RowDefinitions="*,*">
+        <lvc:CartesianChart
+            Series="{Binding Series}">
+        </lvc:CartesianChart>
+        
+        <Grid Grid.Row="1" RowDefinitions="Auto, Auto" ColumnDefinitions="Auto, Auto, *">
+            <ComboBox Items="{Binding Colors}" >
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Key}"  />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            
+        </Grid>
+    </Grid>
 </UserControl>
